Switched to MiToBo boolean wrapper datatype for boolean parameters to preserve parameter links in processing history.