@@ -35,6 +35,7 @@ import de.unihalle.informatik.Alida.exceptions.ALDOperatorException.OperatorExce
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImage;
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImage.MTBImageType;
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImageDouble;
+import de.unihalle.informatik.MiToBo.core.datatypes.wrapper.MTBBooleanData;
 
 /**
  * 2D filter implementing second partial derivative of Gaussian in x.
@@ -84,7 +85,7 @@ public class GaussPDxxFilter2D extends OrientedFilter2D {
 	@Parameter( label= "Invert Mask", required = false, dataIOOrder = 5,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
 	  description = "If true, filter mask is inverted.")
-	protected boolean invertMask = false;
+	protected MTBBooleanData invertMask = new MTBBooleanData(false);
 
 	/**
 	 * Flag to normalize sum of kernel elements to zero.
@@ -92,7 +93,7 @@ public class GaussPDxxFilter2D extends OrientedFilter2D {
 	@Parameter( label= "Normalize Mask", required = false, dataIOOrder = 4,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
 	  description = "If true, mask is normalized to a sum of zero.")
-	protected boolean normalizeMask = true;
+	protected MTBBooleanData normalizeMask = new MTBBooleanData(true);
 
 	/**
 	 * Internal helper mask to mark valid/invalid kernel elements.
@@ -182,7 +183,7 @@ public class GaussPDxxFilter2D extends OrientedFilter2D {
 				else {
 					val = (x_orig*x_orig - sigma_2) / (Math.sqrt(2*Math.PI) * sigma_5) 
 									* Math.exp(-x_orig*x_orig / (2*sigma_2));
-					if (this.invertMask)
+					if (this.invertMask.getValue())
 						val = val * -1;
 					kernelImg.putValueDouble(x+kernelSizeHalf, y+kernelSizeHalf, val);
 					this.kernelMask[x+kernelSizeHalf][y+kernelSizeHalf] = true;
@@ -192,7 +193,7 @@ public class GaussPDxxFilter2D extends OrientedFilter2D {
 			}
 		}
 		// subtract mean value to normalize sum of kernel elements to zero
-		if (this.normalizeMask) {
+		if (this.normalizeMask.getValue()) {
 			kernelMean = kernelMean / kernelCount;
 			for (int x = 0; x < kernelSize; ++x) {
 				for (int y = 0; y < kernelSize; ++y) {
@@ -210,29 +211,53 @@ public class GaussPDxxFilter2D extends OrientedFilter2D {
 	 * @param b		Flag for inversion.
 	 */
 	public void setInvertMask(boolean b) {
-		this.invertMask = b;
+		this.invertMask = new MTBBooleanData(b);
+	}
+
+	/** 
+	 * Enable or disable mask inversion.
+	 * <p>
+	 * Using this method with MiToBo wrapper datatypes instead of passing over
+	 * directly a boolean preserves consistency in the processing history.
+	 * 
+	 * @param m		Value for the mask inversion flag.
+	 */
+	public void setInvertMask(MTBBooleanData m) {
+		this.invertMask = m;
 	}
 
 	/**
 	 * Enable kernel normalization.
 	 */
 	public void enableNormalization() {
-		this.normalizeMask = true;
+		this.normalizeMask = new MTBBooleanData(true);
 	}
 
 	/**
 	 * Disable kernel normalization.
 	 */
 	public void disableNormalization() {
-		this.normalizeMask = false;
+		this.normalizeMask = new MTBBooleanData(false);
 	}
 
+	/** 
+	 * Enable or disable kernel normalization.
+	 * <p>
+	 * Using this method with MiToBo wrapper datatypes instead of passing over
+	 * directly a boolean preserves consistency in the processing history.
+	 * 
+	 * @param kn	Value for the kernel normalization flag.
+	 */
+	public void setKernelNormalization(MTBBooleanData kn) {
+		this.normalizeMask = kn;
+	}
+	
 	/**
 	 * Specify standard deviation of Gaussian.
 	 * @param s		Standard deviation sigma.
 	 */
 	public void setStandardDeviation(double s) {
-		this.gaussStdDev = new Double(s);
+		this.gaussStdDev = Double.valueOf(s);
 	}
 
 	/**
@@ -240,7 +265,7 @@ public class GaussPDxxFilter2D extends OrientedFilter2D {
 	 * @param h		Height of mask.
 	 */
 	public void setHeight(int h) {
-		this.height = new Integer(h);
+		this.height = Integer.valueOf(h);
 	}
 	
 	/**
